--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,2 +1,7 @@
 cmake_minimum_required(VERSION 3.24)
 
+add_library(thunderbreath SHARED src/init.cpp)
+target_link_libraries(thunderbreath PUBLIC ${Dragon_LINK_LIBRARIES})
+target_include_directories(thunderbreath PUBLIC ${Dragon_INCLUDE_DIRS})
+add_library(Dragon::Thunderbreath ALIAS thunderbreath)
+list(APPEND Dragon_LINK_LIBRARIES Dragon::Thunderbreath)
